Fixed vc-appmenu height bug on IE

--- a/src/main/less/vcomet/ui/vc-appmenu/vc-appmenu.less
+++ b/src/main/less/vcomet/ui/vc-appmenu/vc-appmenu.less
@@ -69,7 +69,7 @@
 }
 .@{element}-windowBox {
   display: flex;
-  // width: 100%;
+  width: 100%;
   flex-direction: column;
   // box-sizing: border-box;
   border-width: 2px;
